--- a/public/css/project2.css
+++ b/public/css/project2.css
@@ -1,25 +1,53 @@
+/* 페이지 공통 */
+#wrapper { width: 960px; margin: 0 auto; }
 
-/*페이지 공통*/
-#wrapper { width:1200px; margin: 0 auto; padding: 0}
 nav ul { list-style: none; margin: 0; padding: 0 }
 nav ul li { display: inline-block; padding: 0 65px; }
-a:link { color:black;text-decoration: none; font-weight: bold}
-a:visited {color:black}
-a:hover{color: red; text-decoration: underline;}
-a:active{color: orange}
-hr{background: black; height: 2px; }
-.copy{text-align: center}
-main {min-height: 500px }
 
+a:link { color: black; text-decoration: none; font-weight: bold; }
+a:visited { color: black; }
+a:hover { color: red; text-decoration: underline; }
+a:active { color: orange; }
 
+main { min-height: 500px; }
 
-/*회원가입 로그인*/
+hr { background: black; height: 2px; }
+.copy { text-align: center }
 
-form{  width: 350px; margin: 0 auto; vertical-align: middle }
-div {padding: 5px;}
-form label { display: inline-block; width: 110px; text-align: right; font-weight: bold}
-form input { padding: 5px}
-button { padding: 5px 7px}
+/* 회원가입, 로그인 */
+form { width: 320px; margin: 0 auto; vertical-align: middle }
+div { padding: 5px }
+form label { display: inline-block; width: 110px;
+    text-align: right; font-weight: bold }
+form input { padding: 5px }
+button { padding: 5px 7px }
 
-/*새글 쓰기 본문 보기*/
-.drgup {vertical-align: top }
+/* 새글쓰기, 본문보기 */
+.drgup { vertical-align: top }
+
+/* 회원정보 */
+.myinfo, .myinfo td { /*border: 1px solid black;*/ }
+.myinfo { border-collapse: collapse; width: 300px;
+    margin: 0 auto; }
+.myinfo td { padding: 7px }
+.myinfo td:first-child { font-weight: bold;
+    text-align: right }
+
+/* 게시판 목록 */
+.board { width: 700px; margin: 0 auto;
+    table-layout: fixed; border-collapse: collapse }
+
+.board td { text-align: center; padding: 7px }
+.board td:nth-child(2) { white-space: nowrap;
+    overflow: hidden; text-overflow: ellipsis }
+.board th { padding:7px;
+    background: lightgoldenrodyellow }
+.board tr:nth-child(odd) { background: #e4f7ba }
+.board tr:nth-child(even) { background: #cef279 }
+.alignrgt { text-align-last: right }
+
+.pagenation { list-style: none; padding: 0;
+    margin: 0 auto; width: 435px }
+.pagenation li { display: inline-block; padding: 10px; }
+.cpage { font: bold 48px '맑은 고딕'; color: red }
+.prev { color: #cccccc }
